# REcoM_Standalone

./: CMakeLists.txt  recom_atbox.F90  recom_extra.F90  recom_forcing.F90  recom_gen_halo_exchange.F90  recom_init.F90  recom_main.F90  recom_modules.F90  recom_sinking.F90  recom_sms.F90
.github/workflows/: build.yml
recom/: DNAD.F90  DNADHeaders.h  buffesm.F90  constants.F90  depth2press.F90  derivauto.F90  derivnum.F90  eos.F90  errors.F90  f2pCO2.F90  gasx.F90  gsw_add_barrier.F90  gsw_add_mean.F90  gsw_ct_from_pt.F90  gsw_ct_from_t.F90  gsw_entropy_part.F90  gsw_entropy_part_zerop.F90  gsw_gibbs.F90  gsw_gibbs_pt0_pt0.F90  gsw_mod_baltic_data.F90  gsw_mod_kinds.F90  gsw_mod_specvol_coefficients.F90  gsw_mod_teos10_constants.F90  gsw_mod_toolbox.F90  gsw_pt0_from_t.F90  gsw_pt_from_ct.F90  gsw_pt_from_t.F90  gsw_rho.F90  gsw_sa_from_sp.F90  gsw_sa_from_sp_baltic.F90  gsw_saar.F90  gsw_sp_from_sa.F90  gsw_sp_from_sa_baltic.F90  gsw_specvol.F90  gsw_t_from_ct.F90  gsw_util_indx.F90  gsw_util_xinterp1.F90  p2fCO2.F90  p80.F90  phsolvers.F90  (+10 more)
